# ivy-bundle-size

./: .bazelrc  .gitignore  README.md  WORKSPACE  angular.json  package-lock.json  package.json
e2e/: app.e2e-spec.ts  protractor.conf.js  tsconfig.e2e.json
e2e/src/: app.e2e-spec.ts
side-effects-test/: test.js
snapshot/linux/bazel-current/: bundle_current.min.js  bundle_current.min.js.map
snapshot/linux/bazel-ivy/: bundle_ivy.min.js  bundle_ivy.min.js.map
snapshot/linux/cli-current/: 3rdpartylicenses.txt  main.js.map
snapshot/linux/cli-ivy/: 3rdpartylicenses.txt  main.js  main.js.map
snapshot/linux/rollup-current/: main.js.map
snapshot/linux/rollup-ivy/: main.js
snapshot/windows/bazel-current/: bundle_current.min.js.map
snapshot/windows/bazel-ivy/: bundle_ivy.min.js
snapshot/windows/cli-current/: index.html  main.js
snapshot/windows/cli-ivy/: main.js  main.js.map  runtime.js.map
snapshot/windows/rollup-current/: main.js
snapshot/windows/rollup-ivy/: main.js  main.js.map
snapshots/linux/bazel-current/: bundle_current.min.js.map
snapshots/linux/bazel-ivy/: bundle_ivy.min.js.map  index.html
snapshots/linux/bazel-ivy-compat/: bundle_ivy_compat.min.js  bundle_ivy_compat.min.js.map
snapshots/linux/cli-current/: main.js  main.js.map
snapshots/linux/cli-ivy/: index.html  main.js.map
snapshots/linux/cli-ivy-compat/: main.js  main.js.map
snapshots/linux/rollup-current/: main.js  main.js.map
snapshots/linux/rollup-ivy/: main.js  main.js.map
snapshots/linux/rollup-ivy-compat/: index.html  main.js  main.js.map
snapshots/windows/bazel-current/: bundle_current.min.js  bundle_current.min.js.map  index.html
snapshots/windows/bazel-ivy/: bundle_ivy.min.js  bundle_ivy.min.js.map  index.html
snapshots/windows/bazel-ivy-compat/: bundle_ivy_compat.min.js  bundle_ivy_compat.min.js.map  index.html
snapshots/windows/cli-current/: main.js  main.js.map  unused-index.html
snapshots/windows/cli-ivy/: main.js  main.js.map
snapshots/windows/cli-ivy-compat/: main.js  main.js.map  unused-index.html
snapshots/windows/rollup-current/: main.js  main.js.map
snapshots/windows/rollup-ivy/: index.html  main.js  main.js.map
snapshots/windows/rollup-ivy-compat/: main.js  main.js.map
src/: BUILD.bazel  app.module.ts  main.cli.ts  main.ivy-compat.ts  main.ivy.ts  main.ngc.ts  rollup.config.js  tsconfig.app.json  tsconfig.app.ngtsc.json  tsconfig.ivy.json  tsconfig.ngc.json  tsconfig.ngtsc.json  unused-index.html
