load("@angular//:index.bzl", "ng_module")
load("@angular//packages/bazel/src:ng_rollup_bundle.bzl", "ng_rollup_bundle")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_config")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "ngmodule_current",
    srcs = [
      "main.ngc.ts",
      "app.module.ts",
    ],
    tsconfig = ":tsconfig.ngc.json",
    deps = [
        "@angular//packages/core",
        "@angular//packages/platform-browser",
    ],
)

ng_rollup_bundle(
    name = "bundle_current",
    entry_point = "src/main.ngc",
    deps = [
        ":ngmodule_current",
        "@angular//packages/core",
        "@npm//tslib"
    ],
)


ng_module(
    name = "ngmodule_ivy",
    srcs = [
      "main.ngtsc.ts",
    ],
    tsconfig = ":tsconfig.ngtsc.json",
    deps = [
        "@angular//packages/core",
    ],
)

ng_rollup_bundle(
    name = "bundle_ivy",
    entry_point = "src/main.ngtsc.js",
    deps = [
        ":ngmodule_ivy",
        "@angular//packages/core",
        "@npm//tslib"
    ],
)
