load("@angular//:index.bzl", "ng_module")
load("@angular//packages/bazel/src:ng_rollup_bundle.bzl", "ng_rollup_bundle")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_config")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "ngmodule_current",
    srcs = [
      "main.current.ts",
      "app.module.ts",
    ],
    tsconfig = ":tsconfig.current.json",
    deps = [
        "@angular//packages/core",
        "@angular//packages/platform-browser",
    ],
)

ng_rollup_bundle(
    name = "bundle_current",
    entry_point = "src/main.current",
    deps = [
        ":ngmodule_current",
        "@npm//tslib"
    ],
)

ng_module(
    name = "ngmodule_ivy",
    srcs = [
      "main.ivy.ts",
    ],
    tsconfig = ":tsconfig.ivy.json",
    deps = [
        "@angular//packages/core",
    ],
)

ng_rollup_bundle(
    name = "bundle_ivy",
    entry_point = "src/main.ivy.js",
    deps = [
        ":ngmodule_ivy",
        "@npm//tslib"
    ],
)

ng_module(
    name = "ngmodule_ivy_compat",
    srcs = [
      "main.ivy-compat.ts",
      "app.module.ts",
    ],
    tsconfig = ":tsconfig.ivy.json",
    deps = [
        "@angular//packages/core",
        "@angular//packages/platform-browser",
    ],
)

ng_rollup_bundle(
    name = "bundle_ivy_compat",
    entry_point = "src/main.ivy-compat.js",
    deps = [
        ":ngmodule_ivy_compat",
        "@npm//tslib"
    ],
)
